samples/_failures_safe/1761410062_90f890_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7d1c7de.c: In function ‘main’:
./samples/SAFE/__tmp_e7d1c7de.c:164:5: error: expected ‘,’ or ‘;’ at end of input
  164 |     DecompressFunc decompress = run_length_decode
      |     ^~~~~~~~~~~~~~
./samples/SAFE/__tmp_e7d1c7de.c:164:5: error: expected declaration or statement at end of input
